DE1411: Settings Drop Down pointer is not completely visible on IE8 Browser -- fixed

--- a/docroot/vidyoplayer/css/vidyo-app.css
+++ b/docroot/vidyoplayer/css/vidyo-app.css
@@ -465,7 +465,7 @@
     border-right-color: #FFFFFF;
     top: 25px;
     left: -20px;
-    /*z-index: 9999;*/
+    z-index: 9;
 }
 
 #configurationWrap .tab-content {
